Implement vertex and fragment shader

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -12,13 +12,17 @@ SET(CMAKE_INCLUDE_CURRENT_DIR ON)
 
 # .h files
 list(APPEND HEADER_FILES
-
+src/local.h
+src/shader.h
 )
 
 # .cpp files
 list(APPEND SOURCE_FILES
 src/main.cpp
+src/shader.cpp
 )
+
+
 
 # on windows, append headers to source so they show up in visual studio
 if(WIN32)
@@ -70,6 +74,13 @@ set(APPLICATION_VERSION ${VERSION})
 set(APPLICATION_ORGANIZATION "Mhoek")
 set(APPLICATION_ORGANIZATION_DOMAIN "https://github.com/mhoek2/")
 
+file(GLOB Shaders "${CMAKE_SOURCE_DIR}/src/glsl/*.vert" "${CMAKE_SOURCE_DIR}/src/glsl/*.frag")
+source_group("glsl" FILES ${Shaders})
+
+foreach(SHADER_FILE ${Shaders})
+    get_filename_component(SHADER_NAME ${SHADER_FILE} NAME)
+    configure_file(${SHADER_FILE} ${CMAKE_CURRENT_BINARY_DIR}/${SHADER_NAME} COPYONLY)
+endforeach()
 
 source_group(source REGULAR_EXPRESSION ".*[.]cpp")
 source_group(headers REGULAR_EXPRESSION ".*[.]h")
@@ -79,15 +90,31 @@ include_directories(
     ${INCLUDE_DIRS}
 )
 
+set(GLEW_LIB_PATH "${CMAKE_SOURCE_DIR}/includes/glew/lib/Release/Win32")
+set(GLEW_DLL_PATH "${CMAKE_SOURCE_DIR}/includes/glew/bin/Release/Win32/glew32.dll")
+message(STATUS "GLEW_LIB_PATH: ${GLEW_LIB_PATH}")
+message(STATUS "GLEW_DLL_PATH: ${GLEW_DLL_PATH}")
+
+link_directories(${GLEW_LIB_PATH})
+
 # Generate the executable
-add_executable(${TARGET_NAME} ${SOURCE_FILES} ${RESOURCES})
+add_executable(${TARGET_NAME} ${Shaders} ${SOURCE_FILES} ${RESOURCES})
 target_link_libraries(${TARGET_NAME} glfw)
 
 if(WIN32)
-    target_link_libraries(${TARGET_NAME} opengl32)
+	list(APPEND LIBRARIES
+		${CMAKE_SOURCE_DIR}/includes/glew/lib/Release/Win32
+	)
+
+    target_link_libraries(${TARGET_NAME} opengl32 glew32 glu32)
 elseif(UNIX AND NOT APPLE)
+	list(APPEND LIBRARIES
+		${CMAKE_SOURCE_DIR}/includes/glew/lib/Release/x64
+	)
+	target_link_libraries(${PROJECT_NAME} glew)
     target_link_libraries(${TARGET_NAME} GL)
 endif()
+
 
 # link libraries
 target_link_libraries(${TARGET_NAME} ${LIBRARIES})
@@ -102,4 +129,11 @@ INCLUDE(InstallRequiredSystemLibraries)
 foreach(OUTPUTCONFIG DEBUG RELEASE RELWITHDEBINFO MINSIZEREL)
     string(TOUPPER ${OUTPUTCONFIG} OUTPUTCONFIG_UPPER)
     set(CMAKE_RUNTIME_OUTPUT_DIRECTORY_${OUTPUTCONFIG_UPPER} "${CMAKE_SOURCE_DIR}/build/${OUTPUTCONFIG}")
+
+add_custom_command(TARGET ${TARGET_NAME} POST_BUILD
+    COMMAND ${CMAKE_COMMAND} -E copy_if_different 
+    ${GLEW_DLL_PATH} 
+    ${CMAKE_RUNTIME_OUTPUT_DIRECTORY_${OUTPUTCONFIG_UPPER}}/glew32.dll
+)
 endforeach()
+
