--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,14 +1,57 @@
-#-------------------------------------------------------------------------------
-#	CMAKE SETTINGS
-#-------------------------------------------------------------------------------
+# ------------------------------------------------------------------------------
+# CMAKE SETTINGS
+# ------------------------------------------------------------------------------
 
 cmake_minimum_required(VERSION 3.10)
 
+# Project Metadata
+project(wasm-cross VERSION 1.0 LANGUAGES CXX)
+
+set(CMAKE_CXX_STANDARD 17)
+set(CMAKE_CXX_STANDARD_REQUIRED ON)
+
+# ------------------------------------------------------------------------------
+# OPTIONS AND GLOBALS
+# ------------------------------------------------------------------------------
+
+set(TARGET_NAME ${PROJECT_NAME})
+set(APPLICATION_ORGANIZATION "Mhoek")
+set(APPLICATION_ORGANIZATION_DOMAIN "https://github.com/mhoek2/")
+
+set(CMAKE_INCLUDE_CURRENT_DIR ON)
+
+# ------------------------------------------------------------------------------
+# GIT METADATA
+# ------------------------------------------------------------------------------
+
+find_package(Git QUIET)
+if(GIT_FOUND)
+    execute_process(
+        COMMAND ${GIT_EXECUTABLE} rev-parse --abbrev-ref HEAD
+        WORKING_DIRECTORY ${CMAKE_SOURCE_DIR}
+        OUTPUT_VARIABLE GIT_BRANCH
+        OUTPUT_STRIP_TRAILING_WHITESPACE
+    )
+
+    execute_process(
+        COMMAND ${GIT_EXECUTABLE} describe --abbrev=0 --tags
+        WORKING_DIRECTORY ${CMAKE_SOURCE_DIR}
+        OUTPUT_VARIABLE GIT_TAG
+        OUTPUT_STRIP_TRAILING_WHITESPACE
+    )
+
+    set(PROJECT_NAME ${TARGET_NAME}-${GIT_BRANCH})
+    set(APPLICATION_VERSION ${GIT_TAG})
+endif()
+
+# ------------------------------------------------------------------------------
+# DEPENDENCIES
+# ------------------------------------------------------------------------------
+
+# GLFW
 add_subdirectory(external/glfw)
-SET(CMAKE_INCLUDE_CURRENT_DIR ON)
 
-
-
+# GLM
 include(FetchContent)
 FetchContent_Declare(
     glm
@@ -17,137 +60,84 @@ FetchContent_Declare(
 )
 FetchContent_MakeAvailable(glm)
 
+# GLEW
+set(GLEW_INCLUDE_DIR ${CMAKE_SOURCE_DIR}/external/glew/include)
+set(GLEW_SOURCE ${CMAKE_SOURCE_DIR}/external/glew/src/glew.c)
 
-# .h files
-list(APPEND HEADER_FILES
-src/local.h
-)
+add_library(glew STATIC ${GLEW_SOURCE})
+target_include_directories(glew PUBLIC ${GLEW_INCLUDE_DIR})
+target_compile_definitions(glew PUBLIC -DGLEW_STATIC)
 
-# .cpp files
-list(APPEND SOURCE_FILES
-src/main.cpp
-src/shader.cpp
-src/frame.cpp
-src/framebuffer.cpp
-)
+# ------------------------------------------------------------------------------
+# FILES
+# ------------------------------------------------------------------------------
 
+file(GLOB_RECURSE HEADER_FILES CONFIGURE_DEPENDS src/*.h)
+file(GLOB_RECURSE SOURCE_FILES CONFIGURE_DEPENDS src/*.cpp)
+file(GLOB_RECURSE SHADER_FILES CONFIGURE_DEPENDS src/glsl/*.vert src/glsl/*.frag)
 
-
-# on windows, append headers to source so they show up in visual studio
 if(WIN32)
-	LIST(APPEND SOURCE_FILES ${HEADER_FILES})
+    list(APPEND SOURCE_FILES ${HEADER_FILES}) # For Visual Studio filters
 endif()
 
-#-------------------------------------------------------------------------------
-#	PROJECT SETTINGS
-#-------------------------------------------------------------------------------
-
-set(TARGET_NAME wasm-cross)
-
-# Use git branch as project name if clones from git
-find_package(Git)
-if(GIT_FOUND)
-	execute_process(
-	  COMMAND ${GIT_EXECUTABLE} rev-parse --abbrev-ref HEAD
-	  WORKING_DIRECTORY ${CMAKE_SOURCE_DIR}
-	  OUTPUT_VARIABLE BRANCH
-	  OUTPUT_STRIP_TRAILING_WHITESPACE
-	)
-	execute_process(
-	  COMMAND ${GIT_EXECUTABLE} describe --abbrev=0 --tags
-	  WORKING_DIRECTORY ${CMAKE_SOURCE_DIR}
-	  OUTPUT_VARIABLE VERSION
-	  OUTPUT_STRIP_TRAILING_WHITESPACE
-	)
-	set(PROJECT_NAME ${TARGET_NAME}-${BRANCH})
-else()
-	set(PROJECT_NAME ${TARGET_NAME})
-endif()
-
-# Set the project name
-PROJECT(${PROJECT_NAME})
-
-set(CMAKE_CXX_STANDARD_REQUIRED ON)
-set(CMAKE_CXX_STANDARD 17)
-
-if(MSVC)
-	add_compile_options(/MP)
-	add_compile_options(/std:c++17)
-elseif(CMAKE_COMPILER_IS_GNUCXX)
-	add_compile_options(-std=c++17)
-endif(MSVC)
-
-
-set(APPLICATION_NAME ${TARGET_NAME})
-set(APPLICATION_VERSION ${VERSION})
-set(APPLICATION_ORGANIZATION "Mhoek")
-set(APPLICATION_ORGANIZATION_DOMAIN "https://github.com/mhoek2/")
-
-file(GLOB Shaders "${CMAKE_SOURCE_DIR}/src/glsl/*.vert" "${CMAKE_SOURCE_DIR}/src/glsl/*.frag")
-source_group("glsl" FILES ${Shaders})
-
-foreach(SHADER_FILE ${Shaders})
+# Copy shaders to output directory
+foreach(SHADER_FILE ${SHADER_FILES})
     get_filename_component(SHADER_NAME ${SHADER_FILE} NAME)
     configure_file(${SHADER_FILE} ${CMAKE_CURRENT_BINARY_DIR}/${SHADER_NAME} COPYONLY)
 endforeach()
 
-source_group(source REGULAR_EXPRESSION ".*[.]cpp")
-source_group(headers REGULAR_EXPRESSION ".*[.]h")
-
-
-#set(GLEW_LIB_PATH "${CMAKE_SOURCE_DIR}/includes/glew/lib/Release/Win32")
-#set(GLEW_DLL_PATH "${CMAKE_SOURCE_DIR}/includes/glew/bin/Release/Win32/glew32.dll")
-set(GLEW_INCLUDE_DIR ${CMAKE_SOURCE_DIR}/external/glew/include)
-set(GLEW_SOURCE ${CMAKE_SOURCE_DIR}/external/glew/src/glew.c)
-message(STATUS "GLEW_INCLUDE_DIR: ${CMAKE_SOURCE_DIR}")
-message(STATUS "GLEW_SOURCE: ${CMAKE_SOURCE_DIR}")
-
-add_definitions(-DGLEW_STATIC) 
+# ------------------------------------------------------------------------------
+# INCLUDE DIRECTORIES
+# ------------------------------------------------------------------------------
 
 include_directories(
     ${CMAKE_SOURCE_DIR}/includes
     ${GLEW_INCLUDE_DIR}
-    ${INCLUDE_DIRS}
 )
 
-add_library(glew STATIC ${GLEW_SOURCE})
-target_include_directories(glew PUBLIC ${GLEW_INCLUDE_DIR})
+# ------------------------------------------------------------------------------
+# EXECUTABLE
+# ------------------------------------------------------------------------------
 
-#link_directories(${GLEW_LIB_PATH})
+add_executable(${TARGET_NAME}
+    ${SOURCE_FILES}
+    ${SHADER_FILES}
+)
 
-# Generate the executable
-add_executable(${TARGET_NAME} ${Shaders} ${SOURCE_FILES} ${RESOURCES})
-target_link_libraries(${TARGET_NAME} glfw )
+# Link libraries
+target_link_libraries(${TARGET_NAME}
+    glfw
+    glew
+    glm
+)
 
 if(WIN32)
-    target_link_libraries(${TARGET_NAME} glew opengl32 glu32 glm)
+    target_link_libraries(${TARGET_NAME} opengl32 glu32)
 elseif(UNIX AND NOT APPLE)
-	list(APPEND LIBRARIES
-		${CMAKE_SOURCE_DIR}/includes/glew/lib/Release/x64
-	)
-	target_link_libraries(${PROJECT_NAME} glew)
     target_link_libraries(${TARGET_NAME} GL)
 endif()
 
+# ------------------------------------------------------------------------------
+# OUTPUT CONFIGURATION
+# ------------------------------------------------------------------------------
 
-# link libraries
-target_link_libraries(${TARGET_NAME} ${LIBRARIES})
-
-# Use the automatically determined RPATH values
-set_target_properties(${TARGET_NAME} PROPERTIES INSTALL_RPATH_USE_LINK_PATH TRUE)
-
-INSTALL(TARGETS ${TARGET_NAME} RUNTIME DESTINATION bin)
-INCLUDE(InstallRequiredSystemLibraries)
-
-# Set the build output directory to ./build
-foreach(OUTPUTCONFIG DEBUG RELEASE RELWITHDEBINFO MINSIZEREL)
+# Set output directories
+foreach(OUTPUTCONFIG IN ITEMS DEBUG RELEASE RELWITHDEBINFO MINSIZEREL)
     string(TOUPPER ${OUTPUTCONFIG} OUTPUTCONFIG_UPPER)
     set(CMAKE_RUNTIME_OUTPUT_DIRECTORY_${OUTPUTCONFIG_UPPER} "${CMAKE_SOURCE_DIR}/build/${OUTPUTCONFIG}")
-
-	#add_custom_command(TARGET ${TARGET_NAME} POST_BUILD
-	#    COMMAND ${CMAKE_COMMAND} -E copy_if_different 
-	#    ${GLEW_DLL_PATH} 
-	#    ${CMAKE_RUNTIME_OUTPUT_DIRECTORY_${OUTPUTCONFIG_UPPER}}/glew32.dll
-	#)
 endforeach()
 
+# ------------------------------------------------------------------------------
+# INSTALLATION
+# ------------------------------------------------------------------------------
+
+install(TARGETS ${TARGET_NAME} RUNTIME DESTINATION bin)
+include(InstallRequiredSystemLibraries)
+
+# ------------------------------------------------------------------------------
+# SOURCE GROUPS (VISUAL STUDIO)
+# ------------------------------------------------------------------------------
+
+source_group("Headers" FILES ${HEADER_FILES})
+source_group("Sources" FILES ${SOURCE_FILES})
+source_group("Shaders" FILES ${SHADER_FILES})
