--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -36,7 +36,7 @@ jobs:
 
       - name: Deploy to GitHub Pages
         uses: peaceiris/actions-gh-pages@v3
-        if: github.ref == 'refs/heads/cicd'
+        if: github.ref == 'refs/heads/main'
         with:
           github_token: ${{ secrets.GH_TOKEN }}
           publish_dir: ./build-wasm
